--- a/src/main/resources/static/sass/material-fix.scss
+++ b/src/main/resources/static/sass/material-fix.scss
@@ -17,7 +17,7 @@ md-input-container.md-input-compact {
 }
 
 md-tooltip {
-  font-size: 14px;
+  font-size: 14px !important;
 }
 
 // Font Awesome integration
